--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,3 +35,124 @@
 
 /* NÃO ALTERE DAQUI PRA CIMA */
 /* ESCREVA SEU CÓDIGO ABAIXO */
+#layout{
+  width: 1000px;
+  height: 600;
+  margin-top: 2px;
+  justify-content: center;
+  display: flex;
+  
+}
+/*coisa 1*/
+.tabuleiro {
+  display: flex;
+  flex-wrap: wrap;
+  width: 320px;
+  height: 320px; 
+}
+.quadrado {
+  width: 40px;
+  height: 40px;
+}
+.preto {
+  background-color: #000;
+}
+.branco {
+  background-color: #fff;
+}
+/*coisa 2*/
+.todo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.l1{
+  background-color: #999;
+  width: 100px;
+  height: 20vh;
+}
+.l2{
+  background-color: #484848;
+  width: 100px;
+  height: 30vh;
+}
+
+.l3{
+  background-color: #999;
+  width: 100px;
+  height: 15vh;
+}
+
+.l4{
+  background-color: #484848;
+  width: 100px;
+  height: 35vh;
+}
+
+.l5{
+  background-color: #999;
+  width: 100px;
+  height: 50vh;
+}
+
+.l6{
+  background-color: #484848;
+  width: 100px;
+  height: 20vh;
+}
+/*coisa 3*/
+.p0{
+  display: flex;
+  width: 1000px;
+  height: 600px;
+  background-color: #999;
+  flex-direction: column;
+}
+.p1{
+  background-color: #555;
+  flex: 1;
+}
+.p2{
+  background-color: #484848;
+  flex: 3;
+  display: flex;
+}
+.p3{
+  background-color: #2a2a2a;
+  flex: 1;
+}
+.p4{
+  background-color: #423434;
+  flex: 1;
+  
+}
+.p5{
+  background-color: #dddddd;
+  flex: 2;
+}
+.p6{
+  background-color: #999;
+  flex: 1;
+}
+.p7{
+  flex-direction: row;
+  display: flex;
+  margin:  50px 0px  ;
+}
+.o1{
+  margin: 0px 0px 16px 16px;
+  background-color: #999;
+  padding: 4px;
+}
+.o2{
+  margin: 0px 0px 16px 16px;
+  background-color: #999;
+  padding: 4px;
+}
+.o3{
+  margin: 0px 0px 16px 16px;
+  background-color: #999;
+  padding: 4px;
+}
+
